2015-02-18  Larus  <larus@icdhcp-1-196.epfl.ch>

	* CPU/scanner.l:
	Allow comma (,) and apostraphe (') as decimal separator in
	floating point numbers.

	* QtSpim/menu.cpp (help_ViewHelp):
	Fix Mac help.

2015-02-17  Larus  <larus@icdhcp-1-196.epfl.ch>

	* QtSpim/textwin.cpp (DisplayTextSegments):
	Force redisplay of text segment when font changes.

	* QtSpim/console.cpp (WriteOutput) [https://sourceforge.net/p/spimsimulator/patches/3/]:
	Ensure console output stays visible.

2015-02-17    <larus@IC-LMC-ICDO-01>

	* CPU/syscall.c (myInvalidParameterHandler) [https://sourceforge.net/p/spimsimulator/bugs/46/]:
	Bad parameter to system call invoked Windows Error Reporting and
	crashed spim. Instead, report error in spim.

2014-08-21  Larus  <larus@Jim-MacBook-Air.local>

	* Documentation/SourceForge/index.html:
	Update links to Qt source.

2014-05-31  Larus  <larus@Jim-MacBook-Air.local>

	* spim/spim.c [Jorge Garcia Aguilar <jorgegarag@gmail.com>]:
	Add -dump and -full_dump flags to write data and text segments
	to a file.

2014-02-02  Larus  <larus@Jim-MacBook-Air.local>

	* Setup/QtSpim_Mac_Deployment/QtSpim_Mac_pkproj:
	Fixed Mac install to include instructions how to work around
	Gatekeeper rejection of unsigned apps.

2014-01-26  Larus  <larus@Jim-MacBook-Air.local>

	* CPU/version.h (SPIM_VERSION):
	Version 9.1.13

	* QtSpim/macinfo.plist, QtSpim/QtSpim.pro, NewIcon.icns:
	Added application icon for MacOS.

	* bin/release-osx
	[Philip James, https://sourceforge.net/p/spimsimulator/bugs/54]:
	Need to package Frameworks and plugs with Mac release and change
	file paths so they can be found.

2014-01-22  Larus  <larus@Jim-MacBook-Air.local>

	* CPU/op.h [Philip Machanick <p.machanick@ru.ac.za>]:
	Break instruction does not take any arguments.

2013-12-28    <larus@IC-LMC-ICDO-01>

	* Documentation/SourceForge/index.html:
	Bad path to files on SourceForge.

2013-12-17    <larus@IC-LMC-ICDO-01>

	* New release of QtSpim for Windows to include msvcp110.dll.
